Update background image URL in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         /* Aquí se define la imagen de fondo (Buggy Can-Am Maverick X3 4-door) */
         .background-image {
-            background-image: url('File_20251022-175411.png');
+            background-image: url('https://placehold.co/1920x1080/0d1337/ffffff/png?text=Buggy+Can-Am+Maverick+X3');
             background-size: cover;
             background-position: center;
             filter: grayscale(80%) blur(1px); /* Tono frío y ligero desenfoque */
